examples/errors/int.jas
;; `int` can't have an operand > 255

int 256
